--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,19 @@
     <string name="rb_four_text">Pintura</string>
     <string name="rb_five_text">Conversão</string>
     <string name="rb_six_text">Elétrica</string>
+
+    <string-array name="quantityWall">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
 </resources>
+
+
